# https://packaging.python.org/en/latest/tutorials/packaging-projects/

[build-system]
requires = ['setuptools>=68.0']
build-backend = 'setuptools.build_meta'

[tool.setuptools.packages.find]
where = ['.']

[project]
name = 'pywebutil'
version = '1.0'
authors = [
    { name='Ryan Barrett', email='webutil@ryanb.org' },
]
description = 'Common utilities and handler code for Python web apps'
readme = 'README.md'
requires-python = '>=3.9'
keywords = ['App Engine', 'Flask', 'HTTP', 'web', 'utilities']
dependencies = [
    'cachetools>=3.1',
    'cryptography>=35.0.0',
    'domain2idna>=1.12',
    'Flask>=2.0',
    'grpcio>=1.0',
    'humanize>=4.0',
    'requests>=2.0',
    'requests-hardened>=1.0',
    'werkzeug>=2.0',
]

# https://pypi.org/classifiers/
classifiers = [
    'Programming Language :: Python :: 3',
    'License :: Public Domain',
    'Operating System :: OS Independent',
    'Intended Audience :: Developers',
    'Development Status :: 5 - Production/Stable',
    'Topic :: Software Development :: Libraries :: Python Modules',
]

[project.urls]
'Homepage' = 'https://github.com/snarfed/webutil'
'Documentation' = 'https://oauth-dropins.readthedocs.io/en/latest/source/oauth_dropins.webutil.html'

[project.optional-dependencies]
tests = [
    'flask-caching',
    'httplib2',
    'lxml',
    'mf2py',
    'mf2util',
    'mox3 @ git+https://github.com/snarfed/mox3.git',
    'oauth2client',
    'oauthlib',
    'prawcore',
    'python-tumblpy',
    'tweepy',
    'ujson',
    'urllib3',
    'webob',
    'websockets',
]
html = [
    'beautifulsoup4>=4.8',
    'mf2util>=0.5.0',
]
google-cloud = [
    'google-api-python-client>=2.0',
    'google-cloud-logging>=3.0.0',
    'google-cloud-ndb>=2.0',
]

# wish I could centralize these into ~/.config/uv/uv.toml, but uv.sources
# is project-specific and can't be global. :(
[tool.uv.sources]
mf2util = { path = "../mf2util", editable = true }
mox3 = { path = "../mox3", editable = true }

[tool.deptry]
exclude = ['.venv', 'dist', 'docs']

[tool.deptry.per_rule_ignores]
# required for tests, but loaded implicitly, via util.beautifulsoup_parser = 'lxml'
# in appengine_config.py
DEP002 = ['lxml']
