# https://packaging.python.org/en/latest/tutorials/packaging-projects/

[build-system]
requires = ['setuptools>=77.0']
build-backend = 'setuptools.build_meta'

[tool.setuptools.packages.find]
include = ['webutil*']
exclude = ['webutil.tests*']

[project]
name = 'pywebutil'
version = '1.0'
authors = [
    { name='Ryan Barrett', email='webutil@ryanb.org' },
]
description = 'Common utilities and handler code for Python web apps'
readme = 'README.md'
requires-python = '>=3.9'
keywords = ['App Engine', 'Flask', 'Google Cloud', 'HTTP', 'web', 'webmention', 'utilities']
license = 'CC0-1.0'
# https://pypi.org/classifiers/
classifiers = [
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.9',
    'Operating System :: OS Independent',
    'Intended Audience :: Developers',
    'Development Status :: 5 - Production/Stable',
    'Topic :: Software Development :: Libraries :: Python Modules',
]

dependencies = [
    'cachetools>=3.1',
    'cryptography>=35.0.0',
    'domain2idna>=1.12',
    'Flask>=2.0',
    'grpcio>=1.0',
    'humanize>=4.0',
    'requests>=2.0',
    'requests-hardened>=1.0',
    'werkzeug>=2.0',
]

[project.urls]
'Homepage' = 'https://github.com/snarfed/webutil'
'Documentation' = 'https://oauth-dropins.readthedocs.io/en/latest/source/oauth_dropins.webutil.html'

[project.optional-dependencies]
tests = [
    'flask-caching',
    'httplib2',
    'lxml',
    'mox3 @ git+https://github.com/snarfed/mox3.git',
    'oauth2client',
    'oauthlib',
    'prawcore',
    'python-tumblpy',
    'tweepy',
    'ujson',
    'urllib3',
    'webob',
    'websockets',
]
html = [
    'beautifulsoup4>=4.8',
    'mf2py',
    'mf2util>=0.5.2',
]
google-cloud = [
    'google-api-python-client>=2.0',
    'google-cloud-logging>=3.0.0',
    'google-cloud-ndb>=2.0',
]

# wish I could centralize these into ~/.config/uv/uv.toml, but uv.sources
# is project-specific and can't be global. :(
[tool.uv.sources]
mox3 =    { editable = true, path = "../mox3" }

# we currently use these from PyPI
# mf2util =           { editable = true, path = "../mf2util" }

[tool.deptry]
exclude = ['.venv', 'dist', 'docs']

[tool.deptry.per_rule_ignores]
# required for tests, but loaded implicitly, via util.beautifulsoup_parser = 'lxml'
# in appengine_config.py
DEP002 = ['lxml']
